spring-music-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-music
  namespace: citi-poc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-music
  type: NodePort
